MB-14220: fdb_iterator_seek_to_max on sequence iteration

Supports reverse iteration on sequence number range by
letting user traverse to the highest sequence number in KV Store.

Change-Id: I41b4d6536398ddd7b62efa7c5a9a74779067e483